<resources>
    <string name="app_name">FindCo</string>
    <string name="appName">FindCo</string>
    <string name="registration">Registration</string>
    <string name="registrationError"></string>
    <string name="personFirstNameText"></string>
    <string name="personFirstNameHint">Enter your first name</string>
    <string name="personSurnameText"></string>
    <string name="personSurnameHint">Enter your surname</string>
    <string name="personPasswordText"></string>
    <string name="personPasswordHint">Enter password</string>
    <string name="personRepeatedPasswordText"></string>
    <string name="personRepeatedPasswordHint">Enter password again</string>
    <string name="personEmailText"></string>
    <string name="personEmailHint">Enter your e-mail address</string>
    <string name="newAccountButton">Register</string>
    <string name="login">Login</string>
    <string name="loginButton">Login</string>
    <string name="loginError"></string>
    <string name="linkRegistration">I do not have an account. Go to registration.</string>
    <string name="linkLogin">I already have an acount. Go to login.</string>
    <string name="bookmarkAppManager">Manager</string>
    <string name="bookmarkSearch">Search</string>
    <string name="bookmarkSettings">Settings</string>
    <string name="bookmarkManager">Manager</string>
    <string name="addPhotoButton">Add image</string>
    <string name="imageNameText"></string>
    <string name="imageText"></string>
    <string name="imageViewText">image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accountText">Your account</string>
    <string name="settingChangeImageButton">Change image</string>
    <string name="fistnameField">First name</string>
    <string name="surnameField">Surname</string>
    <string name="emailField">E-mail address</string>
    <string name="changeButton">Change</string>
    <string name="firstnameValue"></string>
    <string name="emailValue"></string>
    <string name="surnameValue"></string>
    <string name="settingsChangePassword1"></string>
    <string name="settingsChangePassword2"></string>
    <string name="newPasswordHint">Enter new password</string>
    <string name="newPasswordHint1">Enter new password again</string>
    <string name="groupNameText"></string>
    <string name="groupAppImageText"></string>
    <string name="groupNameHint">Group name</string>
    <string name="groupPackageName"></string>
    <string name="groupPackageNameHint">Package name</string>
    <string name="groupGroupNameHint">Group name</string>
    <string name="groupPaymentPerPersonVal"></string>
    <string name="groupPaymentPerPersonText">Payment per person</string>
    <string name="groupPersonCountVal"></string>
    <string name="groupPersonCountText">Max number of members</string>
    <string name="groupPaymentDeadlineVal"></string>
    <string name="groupPaymentDeadlineText">Payment deadline</string>
    <string name="groupBankAccountNumberVal"></string>
    <string name="groupBankAccountNumberText">Bank account number</string>
    <string name="groupLoginVal"></string>
    <string name="groupLoginText">Login</string>
    <string name="groupPasswordVal"></string>
    <string name="groupPasswordText">Password</string>
    <string name="groupJoinButton">Join</string>
    <string name="groupLeaveButton">Leave</string>
    <string name="groupMembersText">Members</string>
    <string name="personLoginVal">" "</string>
    <string name="personLoginText">Email</string>
    <string name="personFirstnameVal">" "</string>
    <string name="personFirstnameText">Firstname</string>
    <string name="personSurnameVal">" "</string>
    <string name="personSurname">Surname</string>
    <string name="personGroups">Groups</string>
    <string name="logoutButton">Sign out</string>
    <string name="applicationsText">Applications</string>
    <string name="packagesText">Packages</string>
    <string name="groupsText">Groups</string>
    <string name="changeError">" "</string>
    <string name="PaymentDeadlineLayout">Enter payment deadline</string>
    <string name="LoginLabel">Enter login</string>
    <string name="BankAccountLabel">Enter bank account number</string>
    <string name="PasswordLabel">Enter password</string>
    <string name="PassowrdAgainLabel">Enter password again</string>
    <string name="groupPasswordAgainVal"> </string>
    <string name="addGroupButton">ADD GROUP</string>
    <string name="addGroupLabel">Creating a group</string>
    <string name="errorGroupAdd">" "</string>
    <string name="deletegroupButton">DELETE</string>
    <string name="passAgain">Password again</string>
    <string name="updateGroup">UPDATE</string>
    <string name="errorGroupModify">" "</string>
    <string name="AddButton">Add</string>
    <string name="InfoText">Information</string>
    <string name="nameAddGroup">" "</string>
    <string name="nameAddText">Name</string>
    <string name="peopleNumber">" "</string>
    <string name="maxMembers">Maximum number of members</string>
</resources>
