<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourGroupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/errorGroupModify"
                android:textColor="@android:color/holo_red_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="112dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/imageText"
                    app:srcCompat="@drawable/ic_photo_library_black_24dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="218dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/groupNameHint"
                        android:textColor="@android:color/background_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:text="@string/groupNameText"
                        android:textColor="@android:color/background_dark"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/groupPackageName"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groupPackageNameHint"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/groupPaymentPerPersonVal"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groupPaymentPerPersonText"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/editText18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/groupPaymentDeadlineVal"
                android:inputType="textPersonName"
                android:text="@string/groupPaymentDeadlineVal"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groupPaymentDeadlineText"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/editText19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/groupBankAccountNumberVal"
                android:inputType="textPersonName"
                android:text="@string/groupBankAccountNumberVal"
                android:textColor="@android:color/background_dark"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groupBankAccountNumberText"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/groupPersonCountVal"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groupPersonCountText"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/editText20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/groupLoginVal"
                android:inputType="textPersonName"
                android:text="@string/groupLoginVal"
                android:textColor="@android:color/background_dark"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/InfoText"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/groupMembersText"
                android:textColor="@android:color/background_dark" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/updateGroup"
                android:textColor="@android:color/background_dark" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/deletegroupButton"
                android:textColor="@android:color/background_dark" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>